Fix issues on Firefox 133 (1)
Firefox 133 added window controls to the nav-bar, which also added titlebar-spacers which needed the scope limited to TabsToolbar.

Fix courtesy of bmFtZQ/edge-frfox!

--- a/toolbar/tabbar.css
+++ b/toolbar/tabbar.css
@@ -186,12 +186,12 @@
 }
 
 /* Hide pre-tabs spacer as it isn't needed. */
-.titlebar-spacer[type="pre-tabs"] {
+#TabsToolbar .titlebar-spacer[type="pre-tabs"] {
   display: none !important;
 }
 
 /* Make sure that the post-tabs spacer appears. */
-.titlebar-spacer[type="post-tabs"] {
+#TabsToolbar .titlebar-spacer[type="post-tabs"] {
   display: flex !important;
 }
 
